View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032818 | Community | OCCT:Modeling Algorithms | public | 2022-02-07 10:40 | 2022-02-09 14:51 |
Reporter | Manycore | Assigned To | jgv | ||
Priority | normal | Severity | minor | ||
Status | resolved | Resolution | open | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032818: Modeling Algorithms - Result of sweep operation is invalid | ||||
Description | BRepOffsetAPI_MakePipeShell with the attached path and profile does not build correct on 7.6.0 version. | ||||
Steps To Reproduce | TopoDS_Shape Sh1; TopoDS_Shape Sh2; BRep_Builder B; bool b1 = BRepTools::Read(Sh1, "D:\\path.brep", B); bool b2 = BRepTools::Read(Sh2, "D:\\profile.brep", B); const TopoDS_Wire& path = TopoDS::Wire(Sh1); const TopoDS_Wire& profile= TopoDS::Wire(Sh2); BRepOffsetAPI_MakePipeShell shellMaker(path); shellMaker.SetTransitionMode(static_cast<BRepBuilderAPI_TransitionMode>(2)); shellMaker.Add(profile, /*WithContact*/false, /*WithCorrection*/true); shellMaker.Build(); const TopoDS_Shape& shape = shellMaker.Shape(); | ||||
Tags | No tags attached. | ||||
Test case number | \tests\pipe\bugs\bug32811 | ||||
|
sweep_result_is_not_vaild.png (8,459 bytes) |
|
path.brep (1,016 bytes) profile.brep (3,925 bytes) |
|
https://tracker.dev.opencascade.org/view.php?id=32811 CR32811 Round Corner mode also failed due to same reason |
|
Branch CR32818 has been created by Manycore. SHA-1: b3d67ace47ca018da083f95030e58e98e7bdb2ac Detailed log of new commits: Author: gelin Date: Wed Feb 9 13:26:39 2022 +0800 0032818: Modeling Algorithms - Result of sweep operation is invalid |
|
Dear @msv, please help review the code. CR32809 CR32807 are not reviewed yet |
|
I have assigned it for review to the expert in this algorithm. All bugs will be processed in the order of actual priority. |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-02-07 10:40 | Manycore | New Issue | |
2022-02-07 10:40 | Manycore | Assigned To | => Manycore |
2022-02-07 10:40 | Manycore | File Added: sweep_result_is_not_vaild.png | |
2022-02-07 10:41 | Manycore | Note Added: 0106771 | |
2022-02-07 10:41 | Manycore | File Added: path.brep | |
2022-02-07 10:41 | Manycore | File Added: profile.brep | |
2022-02-07 10:41 | kgv | Summary | Result of sweep operation is invalid => Modeling Algorithms - Result of sweep operation is invalid |
2022-02-07 10:41 | kgv | Steps to Reproduce Updated | |
2022-02-09 08:02 | Manycore | Note Added: 0106809 | |
2022-02-09 08:25 | Manycore | Test case number | => \tests\pipe\bugs\bug32811 |
2022-02-09 08:27 | git | Note Added: 0106810 | |
2022-02-09 08:32 | Manycore | Assigned To | Manycore => msv |
2022-02-09 08:32 | Manycore | Status | new => resolved |
2022-02-09 08:35 | Manycore | Steps to Reproduce Updated | |
2022-02-09 08:41 | Manycore | Note Added: 0106811 | |
2022-02-09 09:47 | msv | Assigned To | msv => jgv |
2022-02-09 09:49 | msv | Note Added: 0106812 | |
2022-02-09 14:51 | kgv | Relationship added | related to 0032811 |