0032818: Modeling Algorithms - Result of sweep operation is invalid

BRepFill_TrimShellCorner.cxx - setting correct orientation for NewEdge
tests/pipe/bugs/bug32818 - new test case added